err/freebase.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/freebase'...
Listing './lib/python3.5/site-packages/freebase/api'...
Compiling './lib/python3.5/site-packages/freebase/api/httpclients.py'...
***   File "./lib/python3.5/site-packages/freebase/api/httpclients.py", line 35
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/freebase/api/mqlkey.py'...
***   File "./lib/python3.5/site-packages/freebase/api/mqlkey.py", line 45
    raise ValueError, 'quotekey() expects utf-8 string or unicode'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/freebase/api/session.py'...
***   File "./lib/python3.5/site-packages/freebase/api/session.py", line 417
    raise MetawebError, 'request failed: %s: %s\n%s' % (url, status, body)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/freebase/fcl'...
Compiling './lib/python3.5/site-packages/freebase/fcl/commands.py'...
***   File "./lib/python3.5/site-packages/freebase/fcl/commands.py", line 51
    print '   %s: %s' % (cmd.name, cmd.shortdoc)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/freebase/fcl/fcl.py'...
***   File "./lib/python3.5/site-packages/freebase/fcl/fcl.py", line 140
    print '\t'.join(strs)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/freebase/fcl/mktype.py'...
***   File "./lib/python3.5/site-packages/freebase/fcl/mktype.py", line 114
    print r.id, r.create
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/freebase/rison.py'...
***   File "./lib/python3.5/site-packages/freebase/rison.py", line 304
    print '*'*70
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/freebase/uritemplate.py'...
***   File "./lib/python3.5/site-packages/freebase/uritemplate.py", line 140
    print 'FAILED %r expected %r' % (uri, test['expected'])
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/freebase-1.0.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
